--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
   "publisher": "robertoachar",
   "icon": "images/logo.png",
   "galleryBanner": {
-    "color": "#122738",
+    "color": "#192a56",
     "theme": "dark"
   },
-  "homepage":
-    "https://github.com/robertoachar/vscode-extension-pack/blob/master/README.md",
+  "homepage": "https://github.com/robertoachar/vscode-extension-pack/blob/master/README.md",
   "repository": {
     "type": "git",
     "url": "https://github.com/robertoachar/vscode-extension-pack.git"
@@ -18,24 +17,32 @@
   "bugs": {
     "url": "https://github.com/robertoachar/vscode-extension-pack/issues"
   },
-  "categories": ["Extension Packs"],
-  "keywords": ["VSCode", "Extension", "Pack"],
+  "categories": [
+    "Extension Packs"
+  ],
+  "keywords": [
+    "VSCode",
+    "Extension",
+    "Pack"
+  ],
   "engines": {
     "vscode": "^1.20.0"
   },
   "extensionDependencies": [
-    "EditorConfig.editorconfig",
-    "dbaeumer.vscode-eslint",
-    "christian-kohler.path-intellisense",
-    "esbenp.prettier-vscode",
-    "ms-devlabs.extension-manifest-editor",
-    "Angular.ng-template",
-    "eg2.tslint",
+    "formulahendry.auto-close-tag",
+    "formulahendry.auto-rename-tag",
     "wesbos.theme-cobalt2",
-    "robertohuertasm.vscode-icons",
-    "ms-python.python",
-    "PeterJausovec.vscode-docker",
-    "robertoachar.vscode-essentials-snippets"
+    "dracula-theme.theme-dracula",
+    "editorconfig.editorconfig",
+    "dbaeumer.vscode-eslint",
+    "sysoev.language-stylus",
+    "sdras.night-owl",
+    "christian-kohler.path-intellisense",
+    "pnp.polacode",
+    "esbenp.prettier-vscode",
+    "ms-vsliveshare.vsliveshare",
+    "robertoachar.vscode-essentials-snippets",
+    "robertohuertasm.vscode-icons"
   ],
   "license": "SEE LICENSE IN LICENSE"
 }
